# rawnind_jddc

./: .envrc  .gitignore  PERFORMANCE_ANALYSIS_FINAL.md  PERFORMANCE_OPTIMIZATIONS.md  PIPELINE_ARCHITECTURE_DIAGRAM.md  PIPELINE_ARCHITECTURE_DIAGRAM_LHS.md  README.md  SHAPE_BUG_FIX_20251014.md  VISUALIZER_COUNTER_DEBUG_20251014.md  dataset_info.json  dl_sample_ds.sh  instant_notes.md  legacy_file_analysis_20251024.md  pipeline_consistency_report.md  preprocessing_analysis_20251010.md  pyproject.toml  requirements.txt  test_cuda.py  test_directory_structure.py  test_gpu_scheduler.py  test_pairing_logic.py
.roo/: mcp.json
archive/deprecated/: _DEPRECATED_DiskCacheManager.py  _DEPRECATED_crop_producer_stage.py
archive/e2e_tests/: e2e_training_smoke.py  e2e_training_smoke_refactored.py  e2e_training_utils.py  e2e_training_utils_real.py  e2e_training_utils_refactored.py
archive/newark_training_integration/: adapters.py  async_to_sync_bridge.py  e2e_training_smoke.py  e2e_training_smoke_refactored.py  e2e_training_utils.py  e2e_training_utils_real.py  e2e_training_utils_refactored.py
archive/unused/: AlignmentProgressTracker.py  channel_utils.py
codebase_search_mcp/: .gitignore  README.md  pyproject.toml  server.py
datasets/RawNIND/: dl_ds.sh  organize_files.sh
datasets/RawNIND/xmp/: Bayer_TEST_7D-2_GT_ISO100_sha1=45803fc993c395c515b165a1f5d7417f4af4fe1e.cr2.tif.xmp  Bayer_TEST_D60-1_GT_ISO100_sha1=8ed4d50624a199ed767b2c7167b172a1d5eb4031.crw.tif.xmp  Bayer_TEST_Laura_Lemons_platformer_GT_ISO50_sha1=3e34f36581d12caf9233bde0bf38586e9a1abe7d.arw.tif.xmp  Bayer_TEST_Laura_Lemons_platformer_GT_ISO50_sha1=e65e60c925d304bbb01cf8bb1310c41e85a05d62.arw.tif.xmp  Bayer_TEST_MuseeL-Saint-Pierre-C500D_GT_ISO100_sha1=f71bff2d267cefbf243971b98beb973daeee84db.cr2.tif.xmp  Bayer_TEST_MuseeL-bluebirds-A7C_GT_ISO50_sha1=3156b462861d9e67f6e0305d8d55ad695a4d937c.arw.tif.xmp  Bayer_TEST_MuseeL-bluebirds-A7C_GT_ISO50_sha1=862fee8e80372d815f0875558939b938c62bb00d.arw.tif.xmp  Bayer_TEST_MuseeL-vases-A7C_GT_ISO50_sha1=128aac6285487ec36b828f31db6d634b094f7ae3.arw.tif.xmp  Bayer_TEST_MuseeL-vases-A7C_GT_ISO50_sha1=3512b789004767165f4330b1e82c6fdce766b221.arw.tif.xmp  Bayer_TEST_Pen-pile_GT_ISO100_sha1=dead5469f750d32cd50f8673f1ae3608bdb9a99d.dng.tif.xmp  (+5 more)
src/common/extlibs/: gdn.py
src/common/libs/: README.md  (+11 more)
src/rawnind/: README.md  __init__.py  capture_image_set.sh  train_dc_bayer2prgb.py  train_dc_prgb2prgb.py  train_denoiser_bayer2prgb.py  train_denoiser_prgb2prgb.py  unittests.py
tests/: REFACTORING_SUMMARY.md  conftest.py  cuda_test.py  demo_msssim_numpy_usage.py  profile_crop_memory.py  profile_crop_producer_memory.py  refactor_bridge_into_pipeline.md  required_tests.md  smoke_test.py  smoke_test_async_crops.py  test_alignment_backends.py  test_alignment_comparison.py  test_alignment_cross_validation.py  test_alignment_improvement.py  test_channel_split_fft.py  test_dataset_manager.py  test_downloader.py  test_downloader_simple.py  test_fft_fixed.py  test_fft_on_real_data.py  test_fft_sign_convention.py  test_filescanner.py  test_ground_truth_validation.py  test_msssim_numpy.py  test_msssim_pytorch_comparison.py  test_overexposure_mask_bayer.py  test_overexposure_mask_bayer_refactored.py  test_post_download_worker.py  test_production_fft.py  test_sceneinfo.py  test_streaming_cache.py  test_yaml_numpy_fix.py
tests.old/: create_curated_test_dataset.py  test_alignment_backends.py  test_alignment_comparison.py  test_bayer_loss_mask.py  test_channel_split_fft.py  test_dataset_manifest.json  test_fft_fixed.py  test_fft_on_real_data.py  test_fft_sign_convention.py  test_more_scenes.py  test_production_fft.py  test_shift_convention.py  test_shift_semantics.py  test_synthetic_misalignment.py  test_xtrans_channel_split.py
(+197 files in other folders)
