[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "rawnind"
version = "0.2.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "black>=25.9.0",
    "colour==0.1.5",
    "colour-science==0.4.6",
    "configargparse==1.7.1",
    "exif==1.6.1",
    "httpx>=0.28.1",
    "matplotlib>=3.10.3",
    "notebook>=7.1.3",
    "opencv-python==4.12.0.88",
    "openexr==3.3.5",
    "openimageio==3.0.6.1",
    "piexif==1.1.3",
    "piqa==1.3.2",
    "psutil>=7.0.0",
    "ptflops==0.7.5",
    "pylint==3.3.8",
    "pypng==0.20220715.0",
    "pytest==8.4.1",
    "pytest-trio>=0.8.0",
    "pytorch-msssim==1.0.0",
    "pyyaml==6.0.2",
    "rawpy==0.25.1",
    "requests==2.28.1",
    "rich>=14.1.0",
    "scipy-stubs==1.16.1.1",
    "torch==2.8.0",
    "torchvision==0.23.0",
    "tqdm==4.66.5",
    "trio>=0.31.0",
]


[dependency-groups]
test = [
    "pytest-mock>=3.15.1",
    "pytest-trio>=0.8.0",
]

[tool.pytest.ini_options]
markers = [
    "trio: trio-based asynchronous tests",
]
