[project]
name = "codebase-search-mcp"
version = "0.1.0"
description = "MCP server for semantic codebase search via Roo-Code indexed collections"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "fastmcp>=2.12.4",
    "fastapi>=0.118.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["server.py"]

[tool.uv]
dev-dependencies = []
